fixed tag suggestion not working on firefox

--- a/src/app/events/addeditevent/input-with-tag-suggestions/input-with-tag-suggestions.component.css
+++ b/src/app/events/addeditevent/input-with-tag-suggestions/input-with-tag-suggestions.component.css
@@ -16,6 +16,7 @@ ul{
   padding: 0;
   list-style-type: none;
   background-color: #f6f6f6;
+  min-width: 200px;
 }
 
 .dropdown{
